examples/test/testpolicy10871.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10871
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key25: value4
      key5: value22
      key26: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value22
          key45: value22
          key11: value26
      podSelector:
        matchLabels:
          key30: value13
